(library (name parsexp) (public_name parsexp) (libraries sexplib0 base.caml)
(ocamlopt_flags (-default-compartment-id 255 -function-sections))
 (preprocess no_preprocessing)
 (lint
  (pps ppx_js_style -check-doc-comments ppx_compare ppx_sexp_conv
   -type-conv-keep-w32=impl -apply=js_style,type_conv)))
